<resources>
    <string name="app_name">CopyQQ</string>
    <string name="userNameHint">CC号/手机号/邮箱</string>
    <string name="passwordHint">密码</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="register">新用户注册</string>
    <string name="loginButtonText">登录</string>
    <string name="backButton">返回</string>
    <string name="firstNavigateButton">消息</string>
    <string name="secondNavigateButton">联系人</string>
    <string name="thirdNavigateButton">动态</string>
    <string name="dongtaiFirstItemOneText">好友动态</string>
    <string name="dongtaiFirstItemTwoText">附近</string>
    <string name="dongtaiFirstItemThreeText">兴趣部落</string>
    <string name="phoneText">电话</string>
    <string name="peoplesChat">多人聊天</string>
    <string name="addFriend">加好友</string>
    <string name="sweep">扫一扫</string>
    <string name="sendToPC">发送到电脑</string>
    <string name="faceToface">面对面快传</string>
    <string name="pay">付款</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="release_to_load">释放加载</string>
    <string name="loading">正在加载</string>
    <string name="searchDongtaiText">搜索电影/音乐/商品...</string>
    <string name="searchText">搜索</string>
    <string name="contactItem0_1">新朋友</string>
    <string name="contactItem0_2">特别关心</string>
    <string name="contactItem0_3">群聊</string>
    <string name="contactItem0_4">公众号</string>
</resources>
