<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
        android:id="@+id/search_dongtai"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:background="@drawable/search_background"
        android:text="@string/searchDongtaiText"
        android:textSize="12sp"
        android:textColor="#6E5974"
        android:drawableLeft="@drawable/search"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/friendDongtai"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/pressed_unpressed"
            android:text="@string/dongtaiFirstItemOneText"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:clickable="true"
            android:drawableTop="@drawable/zone"/>
        <TextView
            android:id="@+id/nearBy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/pressed_unpressed"
            android:text="@string/dongtaiFirstItemTwoText"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:clickable="true"
            android:drawableTop="@drawable/nearby"
            />
        <TextView
            android:id="@+id/hobit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/dongtaiFirstItemThreeText"
            android:background="@drawable/pressed_unpressed"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:clickable="true"
            android:drawableTop="@drawable/hobit"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/loginBack"/>

</LinearLayout>