<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linkTextColor"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginBack"
        tools:context=".activities.LoginActivity">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@color/linkTextColor"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/mainBack"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:background="@color/linkTextColor"
                android:drawableLeft="@drawable/back"
                android:gravity="center"
                android:text="@string/backButton"
                android:textColor="@color/mainBack"
                android:textSize="18sp"
                />

        </RelativeLayout>

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:background="@color/editBack"
            android:hint="@string/userNameHint"
            android:inputType="number"
            android:maxLines="1"
            android:padding="2dp"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="22sp"
            />
        <!--
            用作两个输入框之间的分割线
        -->
        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/userNameInput"
            android:background="@color/loginBack"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:background="@color/editBack"
            android:hint="@string/passwordHint"
            android:maxLines="1"
            android:padding="2dp"
            android:password="true"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/linkTextColor"
            android:gravity="center"
            android:text="注册"
            android:textSize="30sp"/>


    </RelativeLayout>
</LinearLayout>