<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/drawerBack"
    >
    <TextView
        android:id="@+id/topView_content"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:background="@color/drawerBack"/>

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/drawerBack">

        <ImageView
            android:id="@+id/SmainHead"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/mainBack"
                android:textSize="22sp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/extraMenu"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/drawerBack"
            android:scaleType="center"
            android:src="@drawable/add"
            />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@color/mainBack">

    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/loginBack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mainBack"
            android:drawableTop="@drawable/navigation_one_selector"
            android:gravity="center"
            android:text="@string/firstNavigateButton"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mainBack"
            android:drawableTop="@drawable/navigation_two_selector"
            android:gravity="center"
            android:text="@string/secondNavigateButton"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/dongtai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mainBack"
            android:drawableTop="@drawable/navigation_three_selector"
            android:gravity="center"
            android:text="@string/thirdNavigateButton"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>