<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/drawer"

    >
<!--
    主布局先定义，因为一开始先显示在上面
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/drawerBack">
            <ImageView
                android:id="@+id/mainHead"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/default_head_portrait"
                android:layout_margin="5dp"
                />
            <LinearLayout
                android:id="@+id/container"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/mainBack"
                    android:textSize="22sp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/extraMenu"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:background="@color/drawerBack"
                android:scaleType="center"
                />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fragments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:background="@color/mainBack">

        </FrameLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/loginBack"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/firstNavigateButton"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:drawableTop="@drawable/navigation_one_selector"
                android:background="@color/mainBack"/>
            <TextView
                android:id="@+id/contact"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/secondNavigateButton"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:drawableTop="@drawable/navigation_two_selector"
                android:background="@color/mainBack"/>
            <TextView
                android:id="@+id/dongtai"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/thirdNavigateButton"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:drawableTop="@drawable/navigation_three_selector"
                android:background="@color/mainBack"/>
        </LinearLayout>
    </LinearLayout>

<!--
    侧滑布局
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/drawerBack"
        >
        <RelativeLayout
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/loginBack">
            <ImageView
                android:id="@+id/headPortrait"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_head_portrait"
                />
            <TextView
                android:id="@+id/nickname"
                android:layout_toRightOf="@id/headPortrait"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="昵称"/>
            <RatingBar
                android:layout_below="@id/nickname"
                android:layout_toRightOf="@id/headPortrait"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="20dp"
                />
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/er_wei_ma"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/headPortrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="我的个性签名"
                android:textColor="@android:color/black"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/drawerBack"
            android:divider="@null"
            >
        </ListView>
        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="设置"
            android:drawableLeft="@drawable/setting"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>